[tool.poetry]
name = "poc-trader-dash"
version = "0.1.0"
description = ""
authors = ["Travis Cammack <traviscammack@protonmail.com>"]
readme = "README.md"
packages = [{include = "poc_trader_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.10.2"
yfinance = "^0.2.20"
pandas = "^2.0.2"
psycopg = "^3.1.9"
gunicorn = "^20.1.0"
psycopg-binary = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
